# news-summarizer

./: .env.example  .gitignore  DEPLOYMENT-SMALL.md  DEPLOYMENT.md  Makefile  README.md  alembic.ini  deploy-small.sh  deploy.sh  docker-compose.prod.yml  docker-compose.small.yml  docker-compose.yml  pyproject.toml  test_db_connection.py
alembic/: env.py
app/: __init__.py  main.py  main_test.py
app/api/: __init__.py  deps.py
app/api/routers/: __init__.py  alerts.py  channels.py  digests.py  filters.py  health.py  test.py
app/api/v1/: __init__.py  alert_rules.py  channels.py  digests.py  filters.py  posts.py
app/core/: config.py  email.py  emailer.py  logging.py  timeutils.py
app/db/: base.py  crud.py  models.py  session.py
app/ingestion/: language.py  normalizer.py  telegram_client.py
app/llm/: __init__.py  openai_client.py  prompts.py  summarizer.py
app/tasks/: alerting.py  celery_app.py  digest.py  ingest.py  schedules.py
app/utils/: __init__.py  emailer.py  filters.py  normalizer.py
docker/: api.Dockerfile  scheduler.Dockerfile  worker.Dockerfile
scripts/: init_db.py
static/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_crud.py  test_e2e_integration.py  test_email.py  test_filters.py  test_integration.py  test_normalizer.py  test_prompts.py
