[[tool.poetry.packages]]
include = "app"
# NOTE FOR COPILOT:
# - Do not hard-code secrets. Read from app.core.config.Settings.
# ...existing code...

[tool.poetry]
name = "tg-news-summarizer"
version = "0.1.0"
description = "Telegram news summarizer with LLM, alerts, and digests."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = "^0.29"
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
celery = "^5.3"
redis = "^5.0"
telethon = "^1.34"
openai = "^1.30"
pydantic = "^2.7"
pydantic-settings = "^2.0"
tenacity = "^8.2"
httpx = "^0.27"
langdetect = "^1.0"
pytest = "^8.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
isort = "^5.13"
pytest-asyncio = "^0.23"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
